Created the ArbilLogConsole class that acts as a log handler when shown and picks up log messages. Refs #2793

--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -33,7 +33,7 @@ java.util.logging.FileHandler.level = WARNING
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
  
 # Limit the message that are printed on the console to INFO and above.
-java.util.logging.ConsoleHandler.level = ALL
+java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
  
 
@@ -45,6 +45,6 @@ java.level = SEVERE
 javax.level = SEVERE
 sun.level = SEVERE
  
-nl.mpi.arbil.level = INFO
-nl.mpi.flap.level = INFO
-nl.mpi.level = INFO
+nl.mpi.arbil.level = FINEST
+nl.mpi.flap.level = FINEST
+nl.mpi.level = FINEST
