--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -214,7 +214,7 @@
 	<dependency>
 	    <groupId>nl.mpi</groupId>
 	    <artifactId>typechecker</artifactId>
-	    <version>1.7.0</version>
+	    <version>1.7.2-SNAPSHOT</version>
 	    <exclusions>
 		<exclusion>
 		    <groupId>log4j</groupId>
