Arbil logging: improved notifications in change of logging output/configuration. Also increased log level for core libraries from SEVERE to WARNING Refs #2793

--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -41,9 +41,9 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 # Facility specific properties.
 ############################################################
 
-java.level = SEVERE
-javax.level = SEVERE
-sun.level = SEVERE
+java.level = WARNING
+javax.level = WARNING
+sun.level = WARNING
  
 nl.mpi.arbil.level = FINEST
 nl.mpi.flap.level = FINEST
