refs #2683 Added a value for the application.debian.conflicts for the debian package so that the debian installer works again. Also changed the imagemagick dependency to also allow for graphics magick, although this means the installed version may behave like the webstart when it comes to images.

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -46,8 +46,9 @@ application.minimalJavaVersion=1.5.0
 ####################################
 # Distribution
 ####################################
-application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg, imagemagick
+application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg, graphicsmagick-imagemagick-compat
 application.debian.section=science
+application.debian.conflicts=
 
 # zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
 application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
