Added assembly plugin to parent pom to generate source package with custom assembly. Adapted application.properties, added parent project and source package locations

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -61,6 +61,11 @@ application.doneListLocation=https://trac.mpi.nl/query?status=closed&component=A
 # application basedir relative to the installer
 application.baseDir=../
 
+# sources project basedir(i.e. parent project) relative to the installer
+application.sources.baseDir=../../
+# location of sources archive created when building sources project relative to sources project basedir
+application.sources.archiveLocation=target/arbil-src.tar.gz
+
 # NOTICE: The following locations are relative to the application's base directory!
 
 # location of release notes, relative to application baseDir
