--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,33 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+<build>
+	<plugins>
+            <plugin>
+	        <artifactId>maven-assembly-plugin</artifactId>
+      		<version>2.4</version>
+      		<inherited>false</inherited>
+	        <configuration>
+	          <encoding>UTF-8</encoding>
+	          <finalName>arbil</finalName>
+	          <descriptors>
+	            <descriptor>sources-assembly.xml</descriptor>
+	          </descriptors>
+	          <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
+	        </configuration>
+	      	<executions>
+		        <execution>
+		            <id>standalone</id>
+		            <phase>package</phase>
+		            <goals>
+		                <goal>single</goal>
+		            </goals>
+		        </execution>
+		</executions>
+	      </plugin>
+	</plugins>
+</build>
+
     <reporting>
         <plugins>
             <plugin>
