switched to zip for source package

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -64,7 +64,7 @@ application.baseDir=../
 # sources project basedir(i.e. parent project) relative to the installer
 application.sources.baseDir=../../
 # location of sources archive created when building sources project relative to sources project basedir
-application.sources.archiveLocation=target/arbil-src.tar.gz
+application.sources.archiveLocation=target/arbil-src.zip
 
 # NOTICE: The following locations are relative to the application's base directory!
 
