--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,31 @@
     </parent>
     <groupId>nl.mpi</groupId>
     <artifactId>arbil-localisation</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>arbil-localisation</name>
+    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
+    <!--<version>${application.majorVersion}.${application.minorVersion}.33727-${application.branch}</version>-->
+    
+    <name>Arbil Localisation ${arbil.majorVersion}.${arbil.minorVersion}</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <!--    <build>
+    <build> 
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/version.properties</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
+    <!--    
+        
             <plugin>
                 <groupId>com.systemsplanet.plugin</groupId>
                 <artifactId>google-api-translate-java-maven-plugin</artifactId>
@@ -49,8 +66,41 @@
                     </execution>
                 </executions>
             </plugin>
+            -->   
+            <plugin>
+                <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
+                <artifactId>svn-revision-number-maven-plugin</artifactId>
+                <version>1.13</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <entries>
+                        <entry>
+                            <path>${basedir}/src</path>
+                            <!-- this will populate "plugin.version.revision" etc -->
+                            <prefix>plugin.version</prefix>
+                        </entry>
+                    </entries>
+                </configuration>
+            </plugin>
         </plugins>
-    </build>-->
+    </build>
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>plugins-core</artifactId>
+            <version>1.1.35861-stable</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
