--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -293,7 +293,7 @@
 	<dependency>
 	    <groupId>nl.mpi</groupId>
 	    <artifactId>arbil-localisation</artifactId>
-	    <version>1.0-SNAPSHOT</version>
+	    <version>2.5-pretesting-SNAPSHOT</version>
 	</dependency>
 
 	<!-- 
