--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -304,13 +304,13 @@
 	<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-jdk14</artifactId>
-	    <version>1.7.2</version>
+	    <version>${slf4j.version}</version>
 	</dependency>
 	<!-- log4j replacement that redirects to slf4j -->
 	<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>log4j-over-slf4j</artifactId>
-	    <version>1.7.2</version>
+	    <version>${slf4j.version}</version>
 	</dependency>
 
 	<!-- 
