--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>plugins-core</artifactId>
-            <version>1.2-pretesting-SNAPSHOT</version>
+            <version>1.2.38315-pretesting</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -53,6 +53,15 @@
     </dependencies>
 <build>
 	<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
             <plugin>
 	        <artifactId>maven-assembly-plugin</artifactId>
       		<version>2.4</version>
