Added the maven license plugin into the arbil localisation project.

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     </modules>
 
     <organization> 
-        <name>Max Planck Institute for Psycholinguistics</name> 
+        <name>The Language Archive, Max Planck Institute for Psycholinguistics</name> 
         <url>http://tla.mpi.nl/tools/tla-tools</url>
     </organization>
     
