--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -219,11 +219,15 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>imdi-api</artifactId>
-            <version>1.1.2.1</version>
+            <version>1.1.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>   
         </dependency>
