Updated license headers

--- a/arbil-commons/pom.xml
+++ b/arbil-commons/pom.xml
@@ -20,7 +20,6 @@
         <arbil-commons.minorVersion>${arbil.minorVersion}</arbil-commons.minorVersion> 
         <arbil-commons.branch>${arbil.branch}</arbil-commons.branch>  
         <!-- Year to show in copyright messages. Used in the 'About Arbil' dialog (via version.properties) and by maven-license-plugin (see below) -->
-        <arbil-commons.license.copyrightYear>2012</arbil-commons.license.copyrightYear>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.hint.license>gpl20</netbeans.hint.license>
     </properties>
@@ -91,7 +90,7 @@
                     <header>${project.parent.basedir}/license-header.txt</header>
                     <strictCheck>false</strictCheck>
                     <properties>
-                        <year>${arbil-commons.license.copyrightYear}</year>
+                        <year>${arbil.license.copyrightYear}</year>
                         <organization>${project.organization.name}</organization>
                     </properties>
                     <mapping>
