added org.apache log level to warning for initial logging properties

--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -44,7 +44,8 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.level = WARNING
 javax.level = WARNING
 sun.level = WARNING
- 
+org.apache.level = WARNING
+
 nl.mpi.arbil.level = FINEST
 nl.mpi.flap.level = FINEST
 nl.mpi.level = FINEST
