--- a/arbil/src/main/resources/logging-initial.properties
+++ b/arbil/src/main/resources/logging-initial.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2013 Max Planck Institute for Psycholinguistics
+# Copyright (C) 2013 The Language Archive, Max Planck Institute for Psycholinguistics
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -44,7 +44,8 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.level = WARNING
 javax.level = WARNING
 sun.level = WARNING
- 
+org.apache.level = WARNING
+
 nl.mpi.arbil.level = FINEST
 nl.mpi.flap.level = FINEST
 nl.mpi.level = FINEST
