--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <arbil.majorVersion>2</arbil.majorVersion>
         <arbil.minorVersion>5</arbil.minorVersion>
-        <arbil.branch>pretesting</arbil.branch>
+        <arbil.branch>testing</arbil.branch>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.2</slf4j.version>
         <!-- Year to show in copyright messages. Used in the 'About Arbil' dialog (via version.properties) and by maven-license-plugin (see below) -->
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>plugins-core</artifactId>
-            <version>1.2-pretesting-SNAPSHOT</version>
+            <version>1.2.39381-TESTING</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
