Updated plugins framework dependencies, now using the revision numbers as deployed to nexus (built from openjdk on ubuntu)

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>plugins-core</artifactId>
-            <version>1.2.39381-TESTING</version>
+            <version>1.2.39113-testing</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
