--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -271,7 +271,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>pluginloader</artifactId>
-            <version>1.2.39381-TESTING</version>
+            <version>1.2.35804-testing</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
