--- a/arbil-localisation/pom.xml
+++ b/arbil-localisation/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <groupId>nl.mpi</groupId>
     <artifactId>arbil-localisation</artifactId>
-    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
-    <!--<version>${application.majorVersion}.${application.minorVersion}.33727-${application.branch}</version>-->
+<!--    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
+    <version>${arbil.majorVersion}.${arbil.minorVersion}.39295-${arbil.branch}</version>
     
     <name>Arbil Localisation ${arbil.majorVersion}.${arbil.minorVersion}</name>
     <url>http://maven.apache.org</url>
