--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -276,17 +276,17 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-help</artifactId>
-            <version>2.5-testing-SNAPSHOT</version>
+            <version>2.5.39486-testing</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-commons</artifactId>
-            <version>2.5-testing-SNAPSHOT</version>
+            <version>2.5.39486-testing</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-localisation</artifactId>
-	    <version>2.5-testing-SNAPSHOT</version>
+	    <version>2.5.39295-testing</version>
 	</dependency>
 
         <!-- 
