fixed relative keystore location in app properties

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -74,5 +74,5 @@ application.releaseNotesLocation=release_notes.txt
 # location of icons directory, relative to the application baseDir
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
-mpi.keystorelocation=../../../cert/mpi.keystore
+mpi.keystorelocation=../../../../cert/mpi.keystore
 mpi.keyname=lat-mpg
