--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -46,7 +46,8 @@ application.minimalJavaVersion=1.5.0
 ####################################
 # Distribution
 ####################################
-application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg, graphicsmagick-imagemagick-compat
+application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg
+# graphicsmagick-imagemagick-compat see ticket #3623 
 application.debian.section=science
 application.debian.conflicts=
 
