--- a/arbil-commons/src/main/resources/nl/mpi/arbilcommons/version.properties
+++ b/arbil-commons/src/main/resources/nl/mpi/arbilcommons/version.properties
@@ -16,9 +16,9 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #
 
-plugin.majorVersion=${arbil-commons.majorVersion}
-plugin.minorVersion=${arbil-commons.minorVersion}
-plugin.buildVersion=${arbil-commons.version.committedRevision}
-plugin.lastCommitDate=${arbil-commons.version.committedDate}
-plugin.compileDate=${arbil-commons.build-date}
+plugin.majorVersion=${application.majorVersion}
+plugin.minorVersion=${application.minorVersion}
+plugin.buildVersion=${application.buildVersion}
+plugin.lastCommitDate=${application.lastCommitDate}
+plugin.compileDate=${application.buildDate}
 plugin.projectVersion=${project.version}
