--- a/arbil-help/src/main/resources/nl/mpi/arbil/help/version.properties
+++ b/arbil-help/src/main/resources/nl/mpi/arbil/help/version.properties
@@ -1,6 +1,6 @@
-plugin.majorVersion=${arbil.majorVersion}
-plugin.minorVersion=${arbil.minorVersion}
-plugin.buildVersion=${plugin.version.committedRevision}
-plugin.lastCommitDate=${plugin.version.committedDate}
-plugin.compileDate=${plugin.build-date}
+plugin.majorVersion=${application.majorVersion}
+plugin.minorVersion=${application.minorVersion}
+plugin.buildVersion=${application.buildVersion}
+plugin.lastCommitDate=${application.lastCommitDate}
+plugin.compileDate=${application.buildDate}
 plugin.projectVersion=${project.version}
