--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -6,7 +6,7 @@
     <!--    Either use the snapshot version of manually enter the current build number. 
     The build number is only required when depending on the output in other projects or building to the server.-->
 <!--    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>${arbil.majorVersion}.${arbil.minorVersion}.40542-${arbil.branch}</version>
+    <version>2.5.1032-testing</version>
     <name>Arbil</name>   
     
     <parent>
@@ -127,27 +127,6 @@
 		    </execution>
 		</executions>
 	    </plugin>	   
-            <plugin>
-                <groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
-                <artifactId>svn-revision-number-maven-plugin</artifactId>
-                <version>1.13</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>revision</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <entries>
-                        <entry>
-			    <path>${basedir}/src</path>
-			    <!-- this will populate "arbil.version.revision" -->
-			    <prefix>arbil.version</prefix>
-                        </entry>
-                    </entries>
-                </configuration>
-            </plugin>
 	    <plugin>
 		<!-- 
 		    License plugin checks for presence of license header in all source files (with some exceptions, see excludes below).
