--- a/arbil/src/main/resources/nl/mpi/arbil/version.properties
+++ b/arbil/src/main/resources/nl/mpi/arbil/version.properties
@@ -18,11 +18,11 @@
 
 application.title=${arbil.application-title}
 application.iconName=/nl/mpi/arbil/resources/icons/arbil-${arbil.branch}128x128.png
-application.majorVersion=${arbil.majorVersion}
-application.minorVersion=${arbil.minorVersion}
-application.revision=${arbil.version.committedRevision}
-application.lastCommitDate=${arbil.version.committedDate}
-application.compileDate=${application.build-date}
+application.majorVersion=${application.majorVersion}
+application.minorVersion=${application.minorVersion}
+application.revision=${application.buildVersion}
+application.lastCommitDate=${application.lastCommitDate}
+application.compileDate=${application.buildDate}
 application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-${arbil.branch}-current.txt
 application.branch=${arbil.branch}
 application.projectVersion=${project.version}
