--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -5,7 +5,7 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil-wicket</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.6-pretesting-SNAPSHOT</version>
     <name>Arbil Wicket</name>
     <description>Wicket components and application based on Arbil</description>
     <organization> 
