--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -6,7 +6,7 @@
     <!--    Either use the snapshot version of manually enter the current build number. 
     The build number is only required when depending on the output in other projects or building to the server.-->
 <!--    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.5.1036-testing</version>
+    <version>2.5.1037-stable</version>
     <name>Arbil</name>   
     
     <parent>
@@ -17,7 +17,7 @@
     
     <properties>
         <!-- Title of the application as it should be shown run time, e.g. in window titles, error log and "About Arbil" dialog -->
-        <arbil.application-title>Arbil (testing)</arbil.application-title>
+        <arbil.application-title>Arbil</arbil.application-title>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <output.jarname>${project.build.finalName}</output.jarname>
@@ -253,22 +253,22 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>pluginloader</artifactId>
-            <version>1.2.35804-testing</version>
+            <version>1.2.65-stable</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-help</artifactId>
-            <version>2.5.30-testing</version>
+            <version>2.5.30-stable</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-commons</artifactId>
-            <version>2.5.37-testing</version>
+            <version>2.5.37-stable</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-localisation</artifactId>
-            <version>2.5.142-testing</version>
+            <version>2.5.143-stable</version>
         </dependency>
 
         <!-- 
