--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -253,7 +253,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>pluginloader</artifactId>
-            <version>1.3-pretesting-SNAPSHOT</version>
+            <version>1.3-testing-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
