disabled doclint checking of javadoc (makes build fail on JDK8)

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>nl.mpi</groupId>
