--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <additionalparam>-Xdoclint:none</additionalparam>
+                    <failOnError>false</failOnError>
                 </configuration>
             </plugin>
             <plugin>
