switched version checking plugin to git

--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
                 </executions>
                 <configuration>
                     <verbose>true</verbose>
-                    <vcsType>svn</vcsType>
+                    <vcsType>git</vcsType>
                     <allowSnapshots>true</allowSnapshots>
                     <projectDirectory>${project.basedir}</projectDirectory>
                     <majorVersion>2</majorVersion>
